--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="card-container">
+        <div id="card">
+            <div id="card-content">
+                <div id="post-preview-svg"></div>
+                <div id="post-theme"></div>
+                <div id="post-publication-date"></div>
+                <div id="post-title"></div>
+                <div id="post-preview-text"></div>
+                <div id="post-author"></div>
+            </div>
+        </div>
+ <!--       <div id="card-shadow">
+
+        </div>-->
+    </div>
 </body>
 </html>
