--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div id="card-container">
         <div id="card">
             <div id="card-content">
-                <div id="post-preview-svg"></div>
+                <div id="post-preview-svg">
+                    
+                </div>
                 <div id="post-theme"></div>
                 <div id="post-publication-date"></div>
                 <div id="post-title"></div>
