Styled the svg and made it responsive across different screen sizes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <div id="card">
             <div id="card-content">
                 <div id="post-preview-svg">
-                    
+                    <div id="svg-container">
+                        <img src="/assets/images/illustration-article.svg" alt="" id="svg">
+                    </div>
                 </div>
                 <div id="post-theme"></div>
                 <div id="post-publication-date"></div>
