--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
                         <img src="/assets/images/illustration-article.svg" alt="" id="svg">
                     </div>
                 </div>
-                <div id="post-theme"></div>
+                <div id="post-theme">
+                    <div id="theme-container">
+                        <h3>Learning</h3>
+                    </div>
+                </div>
                 <div id="post-publication-date"></div>
                 <div id="post-title"></div>
                 <div id="post-preview-text"></div>
                 <div id="post-author"></div>
             </div>
         </div>
- <!--       <div id="card-shadow">
-
-        </div>-->
     </div>
 </body>
 </html>
