Finish styling the card

--- a/index.html
+++ b/index.html
@@ -23,10 +23,33 @@
                         <h3>Learning</h3>
                     </div>
                 </div>
-                <div id="post-publication-date"></div>
-                <div id="post-title"></div>
-                <div id="post-preview-text"></div>
-                <div id="post-author"></div>
+                <div id="post-publication-date">
+                    <div id="date-container">
+                        <p>Published 21 Dec 2023</p>
+                    </div>
+                </div>
+                <div id="post-title">
+                    <div id="title-container">
+                        <h2>HTML & CSS Foundations</h2>
+                    </div>
+                </div>
+                <div id="post-preview-text">
+                    <div id="text-container">
+                        <p id="post-text">These languages are the backbone of every website, defining structure, content and presentation.</p>
+                    </div>
+                </div>
+                <div id="post-author">
+                    <div id="author-container">
+                        <div id="author-image">
+                            <div id="image-container">
+                                <img src="/assets/images/image-avatar.webp" alt="author profile picture" id="author-profile-picture">
+                            </div>
+                        </div>
+                        <div id="author-name">
+                            <h3>Greg Hooper</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
